--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,20 @@
 :root {
-	--color-iris: #4d5ae5;
-	--color-ocean: #404bbf;
-	--color-navy-blue: #2e2f42;
-	--color-green: #31d0aa;
-	--color-slate: #434455;
-	--color-light-slate: #8e8f99;
-	--color-cornflower: #e7e9fc;
-	--color-cloud: #f4f4fd;
-	--color-navy-blue-modal: #2e2f42;
-	--color-grey: #2e2f42;
-	--color-white: #ffffff;
-	--color-dairy: #fcfcfc;
+  /* Fonts */
+  --primary-font: "Roboto";
+  --secondary-font: "Raleway", Roboto;
+  /*Color-fonts */
+  --color-iris: #4d5ae5;
+  --color-ocean: #404bbf;
+  --color-navy-blue: #2e2f42;
+  --color-green: #31d0aa;
+  --color-slate: #434455;
+  --color-light-slate: #8e8f99;
+  --color-cornflower: #e7e9fc;
+  --color-cloud: #f4f4fd;
+  --color-navy-blue-modal: #2e2f42;
+  --color-grey: #2e2f42;
+  --color-white: #ffffff;
+  --color-dairy: #fcfcfc;
 }
 
 /**
@@ -19,7 +23,11 @@
   |============================
 */
 .body {
-	font-family: ;
+  font-family: var(--primary-font);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--color-navy-blue);
 }
 .section {
 }
@@ -29,79 +37,63 @@
 .link {
   text-decoration: none;
 }
-
-
-.text-style-body {
-	font-size: 16px;
-	font-family: "Roboto";
-	font-weight: 400;
-	font-style: normal;
-	line-height: 24px;
-	letter-spacing: 0.02em;
-	text-decoration: none;
-	text-transform: none;
+.btn {
+	font-family: inherit;
 }
-
-
-.main-title {
-	font-size: 56px;
-	font-family: "Roboto";
-	font-weight: 700;
-	font-style: normal;
-	line-height: 60px;
-	letter-spacing: 0.02em;
-	text-decoration: none;
-	text-transform: none;
+.title {
+  font-size: 56px; 
+  line-height: 1.07;
+  letter-spacing: 0.02em;
 }
 .section-title {
-	font-size: 36px;
-	font-family: "Roboto";
-	font-weight: 700;
-	font-style: normal;
-	line-height: 40px;
-	letter-spacing: 0.02em;
-	text-decoration: none;
-	text-transform: capitalize;
+  font-size: 36px;
+  font-family: "Roboto";
+  font-weight: 700;
+  font-style: normal;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  text-transform: capitalize;
 }
 .subtitle {
-	font-size: 20px;
-	font-family: "Roboto";
-	font-weight: 500;
-	font-style: normal;
-	line-height: 24px;
-	letter-spacing: 0.02em;
-	text-decoration: none;
-	text-transform: none;
+  font-size: 20px;
+  font-family: "Roboto";
+  font-weight: 500;
+  font-style: normal;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  text-transform: none;
 }
 .desc {
-	font-size: 16px;
-	font-family: "Roboto";
-	font-weight: 500;
-	font-style: normal;
-	line-height: 24px;
-	letter-spacing: 0.02em;
-	text-decoration: none;
-	text-transform: none;
+  font-size: 16px;
+  font-family: "Roboto";
+  font-weight: 500;
+  font-style: normal;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  text-transform: none;
 }
 .button {
-	font-size: 16px;
-	font-family: "Roboto";
-	font-weight: 500;
-	font-style: normal;
-	line-height: 24px;
-	letter-spacing: 0.04em;
-	text-decoration: none;
-	text-transform: none;
+  font-size: 16px;
+  font-family: "Roboto";
+  font-weight: 500;
+  font-style: normal;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  text-decoration: none;
+  text-transform: none;
 }
 .small-text {
-	font-size: 12px;
-	font-family: "Roboto";
-	font-weight: 400;
-	font-style: normal;
-	line-height: 14px;
-	letter-spacing: 0.04em;
-	text-decoration: none;
-	text-transform: none;
+  font-size: 12px;
+  font-family: "Roboto";
+  font-weight: 400;
+  font-style: normal;
+  line-height: 14px;
+  letter-spacing: 0.04em;
+  text-decoration: none;
+  text-transform: none;
 }
 
 /**
