--- a/css/styles.css
+++ b/css/styles.css
@@ -105,13 +105,12 @@
 }
 .desc {
   font-size: 16px;
-  font-family: "Roboto";
-  font-weight: 500;
-  font-style: normal;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
-  text-decoration: none;
-  text-transform: none;
+  color: var(--color-navy-blue);
+}
+.desc:hover {
+  color: var(--color-ocean);
 }
 .small-text {
   font-size: 12px;
