--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@
 }
 .desc {
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-navy-blue);
