update style css

--- a/css/styles.css
+++ b/css/styles.css
@@ -159,7 +159,7 @@
 .team-section {
   background-color: var(--color-cloud);
 }
-.team-title-list {
+.team-title-item {
   background-color: var(--color-white);
 }
 /**
